# ci-cd-sandbox-v2

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  release.py  requirements.txt  versions.json
0.10.0/: index.html
0.11.0/: index.html
0.12.0/: 404.html  index.html  objects.inv
0.12.0/reference/: index.html
0.12.0/search/: search_index.json
0.2.0/: 404.html  index.html
0.2.0/explanation/: index.html
0.2.0/how-to-guides/: index.html
0.2.0/reference/: index.html
0.2.0/tutorials/: index.html
0.4.0/: index.html
0.4.0/reference/: index.html
0.5.0/: index.html
0.6.0/: index.html
0.6.0/search/: search_index.json
0.7.0/: index.html
0.8.0/: index.html  search.html
0.9.0/: index.html
calculator/: __init__.py  calculations.py  other.py  third.py
docs/reference/: calculations.md  other.md  third.md
latest/: search.html
latest/explanation/: index.html
latest/how-to-guides/: index.html
latest/reference/: index.html
latest/tutorials/: index.html
tests/: test_calculations.py
