[project]
name = "ci_cd_sandbox_v2"
version = "0.4.0"
description = "A do-nothing library that I can practise my CI/CD routines on"

[tool.black]
line-length = 80

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --cov"
testpaths = [
    "tests",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
    "pyproject.toml:version",
    "calculator/__init__.py:__version__",
]
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
